# Ennov

./: .gitignore  CMakeLists.txt  Ennov.sublime-project  Ennov.sublime-workspace  NOTES.txt
android/app/src/main/cpp/: CMakeLists.txt  main.cpp  shader_utils.c
assets/fonts/Candara/: default.fnt
scripts/: ColorExtractor.py  Colortable.txt
shaders/: font.frag  font.vert  gquad.frag  gquad.vert  ui.frag  ui.vert
src/: .editorconfig  color_table.h  ennov.cpp  ennov.h  ennov_defs.h  ennov_font_parser.cpp  ennov_gl.cpp  ennov_gl.h  ennov_math.h  ennov_platform.h  ennov_render.h  ennov_text.cpp  ennov_ui.cpp  ennov_ui.h  ennov_utils.h  linux_ennov.cpp  linux_main.cpp  stb_truetype.h
src/glad/: glad.c  glad.h
